# advent2021

./: Cargo.toml
ex/: day20.txt  day22c.txt
in/: day24r.txt
