[package]
name = "advent2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
advent_code_lib = {git = "https://github.com/gjf2a/advent_code_lib"}
bits = {git = "https://github.com/gjf2a/bits"}
hash_histogram = "0.6"
bare_metal_modulo = "0.11"